welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:60: error: not found: value pasAFaire
    while ((pasAFaire <= 4) && (!estFaceMur)) {
            ^